force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ConstraintRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConstraintRuleId__c</fullName>
    <description>Reference to the master record which is a constraint rule.</description>
    <label>Constraint Rule</label>
    <referenceTo>Apttus_Config2__ConstraintRule__c</referenceTo>
    <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
    <relationshipName>ConstraintRuleConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>