force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchInCartOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInCartOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to check for options in the whole cart</description>
    <label>Match In Cart Options</label>
    <type>Checkbox</type>
</CustomField>