force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchInLocation__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When match is location is set to true action will be taken for the given location.</description>
    <inlineHelpText>Set this value to true only for location specific rules.</inlineHelpText>
    <label>Match In Location</label>
    <type>Checkbox</type>
</CustomField>