force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchInOptions__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInOptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conditions are evaluated against the products added as options.</description>
    <label>Match In Options</label>
    <type>Checkbox</type>
</CustomField>