force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchInPrimaryLines__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInPrimaryLines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conditions are evaluated against products added as primary lines.</description>
    <label>Match In Primary Lines</label>
    <type>Checkbox</type>
</CustomField>