force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchInRelatedLines__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInRelatedLines__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conditions are evaluated against services.</description>
    <label>Match In Related Lines</label>
    <type>Checkbox</type>
</CustomField>