force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchInServiceAssets__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchInServiceAssets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Conditions are evaluated against services assets.</description>
    <label>Match In Service Assets</label>
    <type>Checkbox</type>
</CustomField>