force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchMaxProducts__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchMaxProducts__c</fullName>
    <description>Used by match rule as the max limit</description>
    <label>Match Max Products</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>