force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__MatchRule__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MatchRule__c</fullName>
    <description>Specifies number of products to match.</description>
    <label>Match Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match Any In Group</fullName>
            </value>
            <value>
                <fullName>Match All In Group</fullName>
            </value>
            <value>
                <fullName>Min/Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>