force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductCategory__c</fullName>
    <description>Category specification is required when product scope is set as category.</description>
    <label>Product Category(Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>