force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFamily__c</fullName>
    <description>Product family specification is necessary when product scope is set as product family.</description>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>