force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductFieldB__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFieldB__c</fullName>
    <label>Product Field B</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ProductCode</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>