force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductFieldD__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFieldD__c</fullName>
    <label>Product Field D</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>