force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductFieldOperatorD__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFieldOperatorD__c</fullName>
    <description>Operator used to search products by product field</description>
    <label>Operator D</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equal to</fullName>
                <default>true</default>
                <label>equal to</label>
            </value>
            <value>
                <fullName>not equal to</fullName>
            </value>
            <value>
                <fullName>starts with</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>does not contain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>