force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductFieldValueB__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFieldValueB__c</fullName>
    <description>Represents the value to be matched against the product field specified in Product Field B</description>
    <label>Field Value B</label>
    <length>255</length>
    <type>Text</type>
</CustomField>