force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductFieldValueD__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductFieldValueD__c</fullName>
    <description>Represents the value to be matched against the product field specified in Product Field D</description>
    <label>Field Value D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>