force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Group should be specified when product scope is set as product group</description>
    <label>Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
    <relationshipName>ConstraintRuleConditions</relationshipName>
    <type>Lookup</type>
</CustomField>