force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product is specified when product scope is set for product</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
    <relationshipName>ConstraintRuleConditions</relationshipName>
    <type>Lookup</type>
</CustomField>