force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__ProductOptionGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductOptionGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Option Group should be specified when product scope is set as option group</description>
    <inlineHelpText>Option Group should be specified when product scope is set as option group</inlineHelpText>
    <label>Product Option Group</label>
    <referenceTo>Apttus_Config2__ProductOptionGroup__c</referenceTo>
    <relationshipLabel>Constraint Rule Conditions</relationshipLabel>
    <relationshipName>ConstraintRuleConditions</relationshipName>
    <type>Lookup</type>
</CustomField>