force-app/main/default/objects/Apttus_Config2__ConstraintRuleCondition__c/fields/Apttus_Config2__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Sequence__c</fullName>
    <description>Sequence number of the rule condition is used in the condition expression defined in constraint rule.</description>
    <label>Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>